--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title></title>
+    <meta property="og:title" content="Isaiæ Vox" />
+    <meta property="og:description" content="La plateforme de ta vocation" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://visio.devekla.com" />
+    <meta property="og:image" content="https://visio.devekla.com/assets/favicon-32x32.png" />
+    <meta property="og:site_name" content="VisioDevEklaProject" />
+    <meta property="og:locale" content="fr_FR" />
+
+    <title>Isaiæ Vox</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
