--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" />
+
+    <meta property="og:title" content="Isaiæ Vox" />
+    <meta property="og:description" content="La plateforme de ta vocation" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/background.jpg" />
+    <meta property="og:site_name" content="VisioDevEklaProject" />
+    <meta property="og:locale" content="fr_FR" />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using React" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/apple-touch-icon.png" />
 <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
@@ -15,6 +24,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/assets/manifest.json" />
+    <title>Isaiæ Vox</title>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,16 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <meta property="og:title" content="Isaiæ Vox" />
-    <meta property="og:description" content="La plateforme de ta vocation" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://visio.devekla.com" />
-    <meta property="og:image" content="https://visio.devekla.com/assets/favicon-32x32.png" />
-    <meta property="og:site_name" content="VisioDevEklaProject" />
-    <meta property="og:locale" content="fr_FR" />
-
-    <title>Isaiæ Vox</title>
-  </head>
+      </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
